--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -29,5 +29,5 @@ jobs:
     - name: Publish package to PyPI
       uses: pypa/gh-action-pypi-publish@master
       with:
-        user: cmachak
+        user: __token__
         password: ${{ secrets.PYPI_TOKEN }}
