--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,6 +2,7 @@
 name = "cascade"
 version = "0.0.1"
 description = "Library for model training in multi-cloud environment."
+readme = "README.md"
 authors = ["Block"]
 
 [tool.poetry.dependencies]
