--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,8 @@
 [tool.poetry]
 name = "block-cascade"
+packages = [
+    {include = "cascade"}
+]
 version = "0.0.1"
 description = "Library for model training in multi-cloud environment."
 readme = "README.md"
