--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,15 +18,15 @@ python = ">=3.8,<3.12"
 cloudml-hypertune = "==0.1.0.dev6"
 cloudpickle = "^2.0"
 databricks-cli = ">=0.17.7"
-gcsfs = "^2023.6.0"
+gcsfs = ">=2023.6.0"
 google-auth = "^2.23.2"
 google-cloud-aiplatform = ">=1.22.1"
 google-cloud-monitoring = "^2.16.0"
 google-cloud-resource-manager = "^1.10.4"
 importlib_resources = {version="*", python="<3.9"}
-prefect =  ">=1.0,<2.14"
+prefect =  ">=1.0"
 pydantic = ">=1.10.0,<2.0.0"
-s3fs = "^2023.6.0"
+s3fs = ">=2023.6.0"
 
 [tool.poetry.group.torch.dependencies]
 torch = ">=1.13.1"
