namespaces cascade module under block (#6)
* namespaces cascade module under block

* updates import paths

* update pyproject.toml

* adds init.py

* fixes

* addl namespace updates

* fix tests

* bumps version

* refactor block.cascade to block_cascade

* refactor block.cascade to block_cascade

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,9 @@
 [tool.poetry]
 name = "block-cascade"
 packages = [
-    {include = "cascade"}
+    {include = "block_cascade"}
 ]
-version = "2.1.1"
+version = "2.2.0"
 description = "Library for model training in multi-cloud environment."
 readme = "README.md"
 authors = ["Block"]
