--- a/pyproject.toml
+++ b/pyproject.toml
@@ -50,4 +50,4 @@ log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(linen
 log_cli_date_format = "%Y-%m-%d %H:%M:%S"
 
 [tool.poetry.scripts]
-block_cascade = "block_cascade.cli:cli"
+cascade = "block_cascade.cli:cli"
