--- a/tests/example-cascade.yml
+++ b/tests/example-cascade.yml
@@ -1,4 +1,4 @@
-cmachak-pr-test:
+cmachak-pr-test2:
     type: GcpResource
     chief:
         type: "n1-standard-4"
@@ -7,3 +7,5 @@ cmachak-pr-test:
         project: "ds-cash-production"
         service_account: "ds-cash-production@ds-cash-production.iam.gserviceaccount.com"
         region: "us-west1"
+        image: "us.gcr.io/ds-cash-production/cascade/block-cascade-test"
+    persistent_resource_id: cmachak-pr-test1
