--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,13 +3,13 @@ name = "block-cascade"
 packages = [
     {include = "block_cascade"}
 ]
-version = "2.5.3"
+version = "2.5.4"
 description = "Library for model training in multi-cloud environment."
 readme = "README.md"
 authors = ["Block"]
 
 [tool.poetry.dependencies]
-python = ">=3.8,<3.12"
+python = ">=3.8,<3.13"
 cloudml-hypertune = "==0.1.0.dev6"
 cloudpickle = "^2.0"
 databricks-cli = ">=0.17.7"
@@ -22,6 +22,8 @@ importlib_resources = {version="*", python="<3.9"}
 prefect =  ">=1.0"
 pydantic = ">=1.10.0,<2.0.0"
 s3fs = ">=2023.6.0"
+# Python 3.12 removed distutils; numpy 1.26.0 is the first version to support installing without it
+numpy = {version=">=1.26.0", python=">=3.12"}
 
 [tool.poetry.group.torch.dependencies]
 torch = ">=1.13.1"
