--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,7 +23,11 @@ prefect =  ">=1.0"
 pydantic = ">=1.10.0,<2.0.0"
 s3fs = ">=2023.6.0"
 # Python 3.12 removed distutils; numpy 1.26.0 is the first version to support installing without it
-numpy = {version=">=1.26.0", python=">=3.12"}
+# Python 3.8 requires numpy 1.24
+numpy = [
+    {version=">=1.26.0", python=">=3.12"},
+    {version="<1.25", python="<3.9"}
+]
 
 [tool.poetry.group.torch.dependencies]
 torch = ">=1.13.1"
