--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -27,6 +27,9 @@ jobs:
     - name: Install dependencies
       run: |
         poetry install --without torch
+    - name: Create /tmp/test directory
+      run: |
+        mkdir -p /tmp/test
     - name: Test
       run: |
         poetry run pytest
