--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches:
       - main  
-      - nkpart.add-serverless-support
+      - nkpart:nkpart.add-serverless-support
 
 jobs:
   deploy:
